Fix buttons on iOS

--- a/src/css/application.css
+++ b/src/css/application.css
@@ -106,6 +106,7 @@ p {
 }
 
 .button {
+  appearance: none;
   cursor: pointer;
   display: inline-block;
   white-space: nowrap;
